package jeu;

public class FichierIncorrectException extends RuntimeException {
    public FichierIncorrectException(String message) {
        super(message);
    }
}
